Fixed alignment issues

--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -8,7 +8,7 @@
     .index-wrapper-row{
         height: 100%;
         width: 100%;
-        max-height: 520px;
+        max-height: 560px;
         max-width: 1170px;
         box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.75);
     }
